--- a/Portfolio/about.html
+++ b/Portfolio/about.html
@@ -21,20 +21,18 @@
         <header class="page-header head">
             <a href="/index.html" class="font1 logo">YS</a>
 
-            <nav class="fill">
-                <h2 class="hidden">navigatie</h2>
-                <ul class="menu">
-                    <li><a href="/index.html">Home</a></li>
+            <div class="navbar">
+                <a href="#" class="toggle">&#9776;</a>
+                <nav class="fill ">
+                  <ul class="menu ">
+                    <li ><a href="/index.html">Home</a></li>
                     <li class="active"><a href="/about.html">over mij</a></li>
                     <li><a href="/projects.html">projecten</a></li>
                     <li><a href="/werkplekleren.html">werkplekleren</a></li>
                     <li><a href="/contact.html">Contact</a></li>
-                </ul>
-                <ul class="breadcrumb">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/about.html">over mij</a></li>
-                </ul>
-            </nav>
+                  </ul>
+                </nav>
+              </div>
 
         </header>
 
@@ -148,7 +146,7 @@
 
                     <img class="split1"
                         src="https://www.kisp.be/filemedia/78747/xl"
-                        alt="klasgroep" style="width:100%">
+                        alt="klasgroep" >
 
 
                 </div>
@@ -212,4 +210,11 @@
         </footer>
 
     </body>
+    <script>const toggle = document.querySelector('.toggle');
+        const menu = document.querySelector('.menu');
+        
+        toggle.addEventListener('click', () => {
+          menu.classList.toggle('visible');
+        });
+        </script>
 </html>
