--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -17,15 +17,23 @@
             <header class="page-header">
                 <a href="/index.html" class="font1 logo">YS</a>
 
-                <nav class="fill ">
-                    <ul class="menu ">
+
+
+
+                <div class="navbar">
+                    <a href="#" class="toggle">&#9776;</a>
+                    <nav class="fill ">
+                      <ul class="menu ">
                         <li class="active"><a href="/index.html">Home</a></li>
                         <li><a href="/about.html">over mij</a></li>
                         <li><a href="/projects.html">projecten</a></li>
                         <li><a href="/werkplekleren.html">werkplekleren</a></li>
                         <li><a href="/contact.html">Contact</a></li>
-                    </ul>
-                </nav>
+                      </ul>
+                    </nav>
+                  </div>
+
+
 
 
             </header>
@@ -84,4 +92,11 @@
             </footer>
 
         </body>
+        <script>const toggle = document.querySelector('.toggle');
+            const menu = document.querySelector('.menu');
+            
+            toggle.addEventListener('click', () => {
+              menu.classList.toggle('visible');
+            });
+            </script>
     </html>
